--- a/app/src/main/res/layout/activity_mechanism.xml
+++ b/app/src/main/res/layout/activity_mechanism.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="115dp"
         android:background="#009688"
         android:shadowColor="#F6FAF9"
-        android:text="Why do we have fever?"
+        android:text="@string/why_do_we_have_fever"
         android:textColor="#FFFFFF"
         android:onClick="goTOLink1"
         app:layout_constraintEnd_toEndOf="parent"
