(Hands-on 7.2) added log messages in BroadcastReceiver

--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -27,10 +27,10 @@
         android:id="@+id/LogSaveButton"
         android:layout_width="391dp"
         android:layout_height="108dp"
-        android:layout_marginTop="612dp"
+        android:layout_marginTop="488dp"
+        android:onClick="confirmBT"
         android:shadowColor="#8BC34A"
         android:text="@string/save"
-        android:onClick="confirmBT"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="#7CB342"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,10 +42,11 @@
         android:id="@+id/LogInputData"
         android:layout_width="390dp"
         android:layout_height="117dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="96dp"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="#FDD835"
         app:layout_constraintStart_toStartOf="@+id/LogTitle"
         app:layout_constraintTop_toBottomOf="@+id/LogTitle" />
